<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="600dp"
    android:layout_height="400dp"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/mal_sign_in"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/mal_sign_in_text"
        android:textColor="#FFFFFF" />

    <RelativeLayout
        android:id="@+id/mal_sign_in_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mal_sign_in"
        android:layout_marginBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <EditText
            android:id="@+id/edit_username"
            style="@style/Base.TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
            android:hint="@string/login_username_hint"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="#FFFFFF"
            android:textColorHint="@color/hint_text_color"
            android:textSize="18sp"
            android:theme="@style/Theme.App.Base" />

        <RelativeLayout
            android:id="@+id/password_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_username">

            <EditText
                android:id="@+id/edit_password"
                style="@style/Base.TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingEnd="45dp"
                android:paddingRight="45dp"
                android:textColor="#FFFFFF"
                android:textColorHint="@color/hint_text_color"
                android:textSize="18sp"
                android:theme="@style/Theme.App.Base" />

            <ImageView
                android:id="@+id/clear_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/edit_password"
                android:layout_alignRight="@id/edit_password"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_close"
                android:tint="@android:color/white"
                android:visibility="gone" />

        </RelativeLayout>

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_container"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/sign_in" />

    </RelativeLayout>
</RelativeLayout>