<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/list"
        android:name="me.jakemoritz.animebuzz.fragments.BacklogFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        app:layoutManager="LinearLayoutManager"
        tools:context=".fragments.BacklogFragment" />

    <include
        android:id="@+id/empty_view_included"
        layout="@layout/empty_view"
        android:visibility="visible" />

    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:indeterminate="true"
        android:visibility="invisible"
        app:mpb_progressStyle="horizontal"
        app:mpb_useIntrinsicPadding="false" />
</FrameLayout>