...
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="60dp"
            android:text="@string/change_later_text"
            android:textColor="#80FFFFFF" />

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/change_later"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="@string/start_button_text" />
...
